# CS7643FinalProject

./: .gitignore  README.md  config_log.csv  main.py  paul_training_notebook.ipynb  pyproject.toml
PointNet/: PointNet.py  PointNetClassification.py  TNet.py  augment_train_data.py  env.yml  load_data.py  loss.py  notebook.ipynb  results.csv  search.py  train.py
PointNet/log/: results.csv  search_log.csv
PointPillarUpgrades/: config_log.csv  paul_training_notebook.ipynb
PointPillarUpgrades/output_20251124_202257/: modelnet10_pointpillars_history.csv  modelnet10_pointpillars_summary.json  pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251125_073337/: pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_162558/: pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_165431/: modelnet10_pointpillars_history.csv  modelnet10_pointpillars_summary.json  pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_173411/: pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_174155/: modelnet10_pointpillars_history.csv  modelnet10_pointpillars_summary.json  pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_185705/: modelnet10_pointpillars_history.csv  modelnet10_pointpillars_summary.json  pointpillars_ModelNet10.pth
PointPillarUpgrades/output_20251129_215603/: modelnet10_pointpillars_history.csv  (+2 more)
point_pillar/: config.py  modelnet_dataset.py  pillar_feature_net.py  pillar_model.py  pillar_scatter.py  pillar_simple_backbone.py  pillar_trainer.py  pillar_voxelizer.py  training_notebook.py
(+28 files in other folders)
